--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -14,7 +14,7 @@ jobs:
         ports:
           - 1433:1433
         env:
-          SA_PASSWORD: Your_password123
+          SA_PASSWORD: dJgpbRHm53
           ACCEPT_EULA: Y
 
     steps:
@@ -28,4 +28,4 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --filter "FullyQualifiedName!~AcceptanceTests"
       env:
-        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=Your_password123;MultipleActiveResultSets=true;Encrypt=false;
+        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=dJgpbRHm53;MultipleActiveResultSets=true;Encrypt=false;
