--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         ports:
           - 1433:1433
         env:
-          SA_PASSWORD: Your_password123
+          SA_PASSWORD: dJgpbRHm53
           ACCEPT_EULA: Y
 
     steps:
@@ -32,7 +32,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --filter "FullyQualifiedName!~AcceptanceTests"
       env:
-        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=Your_password123;MultipleActiveResultSets=true;
+        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=dJgpbRHm53;MultipleActiveResultSets=true;
     - name: Publish
       run: dotnet publish src/WebUI/WebUI.csproj --configuration Release --output website
     - name: Upload a Build Artifact
