--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --filter "FullyQualifiedName!~AcceptanceTests"
       env:
-        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=dJgpbRHm53;MultipleActiveResultSets=true;
+        ConnectionStrings__DefaultConnection: Server=.;Database=CleanArchitectureDb-Test;User=sa;Password=dJgpbRHm53;MultipleActiveResultSets=true;TrustServerCertificate=True;
     - name: Publish
       run: dotnet publish src/WebUI/WebUI.csproj --configuration Release --output website
     - name: Upload a Build Artifact
